--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -13,5 +13,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "CloudinarySettings": {
+    "CloudName": "dp7utrng4",
+    "ApiKey": "327268967459582",
+    "ApiSecret": "yVIh8EL0wQoi-38lTgar77ZajQM"
+  },
   "AllowedHosts": "*"
 }
