--- a/Business/BabsKitapEvi.Business.csproj
+++ b/Business/BabsKitapEvi.Business.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+    <PackageReference Include="CloudinaryDotNet" Version="1.27.6" />
     <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.3.1" />
     <PackageReference Include="TS.Result" Version="9.0.1" />
   </ItemGroup>
