refactor: Move DTOs to a new Common layer

--- a/Business/BabsKitapEvi.Business.csproj
+++ b/Business/BabsKitapEvi.Business.csproj
@@ -3,6 +3,7 @@
   <ItemGroup>
     <ProjectReference Include="..\DataAccess\BabsKitapEvi.DataAccess.csproj" />
     <ProjectReference Include="..\Entities\BabsKitapEvi.Entities.csproj" />
+    <ProjectReference Include="..\Common\BabsKitapEvi.Common.csproj" />
   </ItemGroup>
 
   <ItemGroup>
